# writting_new

./: .env.example  .gitignore  =5.2  README.md  pyproject.toml  修改日志.txt
agent-analyse/: 00-修改清单.md  01-整体架构.md  02-后端核心逻辑.md  03-工作流与产物机制.md  04-API与前端协作.md  05-数据存储与审计.md  06-扩展与维护指南.md  README.md
data/audit/: events.jsonl
data/projects/: proj_7ba785279008.json
docs/: parameter-flow-audit.md
frontend/: chapter-plan.html  index.html  outline.html  review.html  volume-outline.html  workflow.html
frontend/assets/: styles.css  workflow.css
frontend/assets/js/: api-client.js  app-config.js  artifact-selectors.js  dom.js  index-page.js  outline-page.js  planning-defaults.js  review-page.js  scope-utils.js  state.js  step-meta.js  structure-page.js  structured-parsers.js  (+2 more)
novel_agent/: __init__.py  agent_helpers.py  agents.py  config.py  container.py  context_builder.py  director.py  domain.py  infrastructure.py  longform_memory.py  main.py  orchestrator.py  quality.py  scene_model.py  services.py  sqlite_store.py  validators.py  workflow_schema.py  workflow_spec.py
novel_agent/api/: app.py  deps.py  schemas.py
novel_agent/gui/: __main__.py  app.py  app_ctk.py  app_modern.py  scope_utils.py  state.py  step_fields.py  task_monitor.py  theme.py
prompts/: _shared_generation_rules.md  _shared_json_contract.md  chapter.md  chapter_plan.md  characters.md  consistency.md  field_completion.md  memory.md  outline.md  requirements.md  revision.md  rough_chapter_plan.md  rough_volume_outline.md  story_bible.md  volume_outline.md
tests/: test_scope_and_structure.py
(+12 files in other folders)
