[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novel-agent-clean"
version = "0.1.0"
description = "A decoupled novel-writing agent framework with tkinter GUI and pluggable agents."
requires-python = ">=3.10"
dependencies = [
  "python-dotenv>=1.0",
  "pydantic>=2.7",
  "customtkinter>=5.2",
]

[project.optional-dependencies]
test = [
  "pytest>=9.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["novel_agent*"]
